terraform/spoke-3tier/main.tf
#======#
# Data #
#======#

### Spoke Subscription ###
data "azurerm_subscription" "current" {
}

### Hub Virtual Network ###
data "azurerm_virtual_network" "hub" {
  count               = var.HubEnabled ? 1 : 0
  provider            = azurerm.hub
  name                = "hub-${var.Region}-vnet"
  resource_group_name = "hub-network-${var.Region}-rg"
}

### Hub Management Subnet ###
data "azurerm_subnet" "mgmt" {
  count                = var.HubEnabled ? 1 : 0
  provider             = azurerm.hub
  name                 = "mgmt-subnet"
  virtual_network_name = data.azurerm_virtual_network.hub[0].name
  resource_group_name  = data.azurerm_virtual_network.hub[0].resource_group_name
}

### Virtual Network Gateway Subnet ###
data "azurerm_subnet" "gateway" {
  count                = var.HubEnabled ? 1 : 0
  provider             = azurerm.hub
  name                 = "GatewaySubnet"
  virtual_network_name = data.azurerm_virtual_network.hub[0].name
  resource_group_name  = data.azurerm_virtual_network.hub[0].resource_group_name
}

### Hub Azure Firewall ###
data "azurerm_firewall" "hub" {
  count               = (var.HubEnabled && var.FwEnabled) ? 1 : 0
  provider            = azurerm.hub
  name                = "hub-${var.Region}-firewall"
  resource_group_name = "hub-network-${var.Region}-rg"
}


#========#
# Locals #
#========#

locals {
  ### App Gateway or Load balancer Locals ###
  backend_address_pool_name      = "${var.EnvName}-backend-pool"
  frontend_port_name             = "${var.EnvName}-fe-port"
  frontend_ip_configuration_name = "${var.EnvName}-fe-ip"
  http_setting_name              = "${var.EnvName}-be-htst"
  listener_name                  = "${var.EnvName}-http-lstn"
  request_routing_rule_name      = "${var.EnvName}-rq-rt"
  redirect_configuration_name    = "${var.EnvName}-rdr-cfg"
  health_probe_name              = "${var.EnvName}-health-probe"
  ### VMSS Backend Pool IDs ###
  app_gateway_backend_pool_ids = [for pool in toset(azurerm_application_gateway.web.backend_address_pool) : pool.id]
  ### Compute Images ###
  stripped_env_name        = replace(replace(var.EnvName, "sa-", ""), "hs-", "")
  web_vmss_source_image_id = "/subscriptions/${var.SubscriptionId}/resourceGroups/${local.stripped_env_name}-image-rg/providers/Microsoft.Compute/images/${var.WebImageId}"
  app_vmss_source_image_id = "/subscriptions/${var.SubscriptionId}/resourceGroups/${local.stripped_env_name}-image-rg/providers/Microsoft.Compute/images/${var.AppImageId}"
}

#===============#
# Subscriptions #
#===============#

resource "azurerm_monitor_diagnostic_setting" "sub_diagnostic_settings" {
  name                       = "ActivityLog-to-${var.EnvName}-${var.Region}-law"
  target_resource_id         = data.azurerm_subscription.current.id
  log_analytics_workspace_id = azurerm_log_analytics_workspace.law.id

  enabled_log {
    category = "Administrative"
  }
  enabled_log {
    category = "Security"
  }
  enabled_log {
    category = "Alert"
  }
  enabled_log {
    category = "Policy"
  }
  enabled_log {
    category = "ResourceHealth"
  }
  enabled_log {
    category = "Autoscale"
  }
  enabled_log {
    category = "Recommendation"
  }
  enabled_log {
    category = "ServiceHealth"
  }
}

#================#
# Resource Group #
#================#

resource "azurerm_resource_group" "web_rg" {
  name     = "web-${var.EnvName}-rg"
  location = var.Region
}

resource "azurerm_resource_group" "app_rg" {
  name     = "app-${var.EnvName}-rg"
  location = var.Region
}

resource "azurerm_resource_group" "db_rg" {
  name     = "db-${var.EnvName}-rg"
  location = var.Region
}

resource "azurerm_resource_group" "network_rg" {
  name     = "network-${var.EnvName}-rg"
  location = var.Region
}

resource "azurerm_resource_group" "monitor_rg" {
  name     = "monitor-${var.EnvName}-rg"
  location = var.Region
}

#============#
# Monitoring #
#============#

resource "azurerm_log_analytics_workspace" "law" {
  name                = "${var.EnvName}-${var.Region}-law"
  resource_group_name = azurerm_resource_group.monitor_rg.name
  location            = azurerm_resource_group.monitor_rg.location
  sku                 = "PerGB2018"
  retention_in_days   = 30
}

#============#
# Networking #
#============#

### Virtual Network and Subnets ###

resource "azurerm_virtual_network" "vnet" {
  name                = "spoke-${var.EnvName}-vnet"
  resource_group_name = azurerm_resource_group.network_rg.name
  location            = azurerm_resource_group.network_rg.location
  address_space       = var.VnetAddressSpace
}

resource "azurerm_subnet" "appgw_subnet" {
  name                            = "web-appgw-subnet"
  resource_group_name             = azurerm_resource_group.network_rg.name
  virtual_network_name            = azurerm_virtual_network.vnet.name
  address_prefixes                = var.AppGwSubnetPrefix
  default_outbound_access_enabled = false
}

resource "azurerm_subnet" "web_subnet" {
  name                            = "web-subnet"
  resource_group_name             = azurerm_resource_group.network_rg.name
  virtual_network_name            = azurerm_virtual_network.vnet.name
  address_prefixes                = var.WebSubnetPrefix
  default_outbound_access_enabled = false
}

resource "azurerm_subnet" "app_lb_subnet" {
  name                            = "app-lb-subnet"
  resource_group_name             = azurerm_resource_group.network_rg.name
  virtual_network_name            = azurerm_virtual_network.vnet.name
  address_prefixes                = var.AppLbSubnetPrefix
  default_outbound_access_enabled = false
}

resource "azurerm_subnet" "app_subnet" {
  name                            = "app-subnet"
  resource_group_name             = azurerm_resource_group.network_rg.name
  virtual_network_name            = azurerm_virtual_network.vnet.name
  address_prefixes                = var.AppSubnetPrefix
  default_outbound_access_enabled = false
}

resource "azurerm_subnet" "data_lb_subnet" {
  name                            = "data-lb-subnet"
  resource_group_name             = azurerm_resource_group.network_rg.name
  virtual_network_name            = azurerm_virtual_network.vnet.name
  address_prefixes                = var.DataLbSubnetPrefix
  default_outbound_access_enabled = false
}

resource "azurerm_subnet" "data_subnet" {
  name                            = "data-subnet"
  resource_group_name             = azurerm_resource_group.network_rg.name
  virtual_network_name            = azurerm_virtual_network.vnet.name
  address_prefixes                = var.DataSubnetPrefix
  default_outbound_access_enabled = false
}

### Peerings ###

resource "azurerm_virtual_network_peering" "hub_to_spoke" {
  count                        = var.HubEnabled ? 1 : 0
  provider                     = azurerm.hub
  name                         = "hub-to-spoke-${var.EnvName}"
  resource_group_name          = "hub-network-${var.Region}-rg"
  virtual_network_name         = data.azurerm_virtual_network.hub[0].name
  remote_virtual_network_id    = azurerm_virtual_network.vnet.id
  allow_virtual_network_access = true
  allow_forwarded_traffic      = true
}

resource "azurerm_virtual_network_peering" "spoke_to_hub" {
  count                        = var.HubEnabled ? 1 : 0
  name                         = "spoke-${var.EnvName}-to-hub"
  resource_group_name          = azurerm_resource_group.network_rg.name
  virtual_network_name         = azurerm_virtual_network.vnet.name
  remote_virtual_network_id    = data.azurerm_virtual_network.hub[0].id
  allow_virtual_network_access = true
  allow_forwarded_traffic      = true
}

### Web Application Gateway ###

resource "azurerm_application_gateway" "web" {
  name                = "web-${var.EnvName}-appgw"
  resource_group_name = azurerm_resource_group.web_rg.name
  location            = azurerm_resource_group.web_rg.location

  sku {
    name     = "Standard_v2"
    tier     = "Standard_v2"
    capacity = 2
  }

  gateway_ip_configuration {
    name      = "ip-configuration-appgw"
    subnet_id = azurerm_subnet.appgw_subnet.id
  }

  frontend_port {
    name = local.frontend_port_name
    port = 80
  }

  frontend_ip_configuration {
    name                 = local.frontend_ip_configuration_name
    public_ip_address_id = azurerm_public_ip.web_appgw.id
  }

  backend_address_pool {
    name = local.backend_address_pool_name
  }

  backend_http_settings {
    name                  = local.http_setting_name
    cookie_based_affinity = "Disabled"
    path                  = "/"
    port                  = 80
    protocol              = "Http"
    request_timeout       = 60
  }

  http_listener {
    name                           = local.listener_name
    frontend_ip_configuration_name = local.frontend_ip_configuration_name
    frontend_port_name             = local.frontend_port_name
    protocol                       = "Http"
  }

  request_routing_rule {
    name                       = local.request_routing_rule_name
    priority                   = 9
    rule_type                  = "Basic"
    http_listener_name         = local.listener_name
    backend_address_pool_name  = local.backend_address_pool_name
    backend_http_settings_name = local.http_setting_name
  }
}

### Web App Gateway Public IP Address ###

resource "azurerm_public_ip" "web_appgw" {
  name                = "web-${var.EnvName}-appgw-pip"
  location            = azurerm_resource_group.web_rg.location
  resource_group_name = azurerm_resource_group.web_rg.name
  allocation_method   = "Static"
  sku                 = "Standard"

  lifecycle {
    ignore_changes = [ip_tags]
  }
}

### App Load Balancer ###

# Application Tier Internal Load Balancer
resource "azurerm_lb" "app_lb" {
  name                = "app-${var.EnvName}-lb"
  resource_group_name = azurerm_resource_group.app_rg.name
  location            = azurerm_resource_group.app_rg.location
  sku                 = "Standard"

  frontend_ip_configuration {
    name                          = local.frontend_ip_configuration_name
    subnet_id                     = azurerm_subnet.app_lb_subnet.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_lb_backend_address_pool" "app_backend_pool" {
  loadbalancer_id = azurerm_lb.app_lb.id
  name            = local.backend_address_pool_name
}

resource "azurerm_lb_probe" "app_probe" {
  loadbalancer_id     = azurerm_lb.app_lb.id
  name                = local.health_probe_name
  protocol            = "Http"
  port                = 80
  request_path        = "/"
  interval_in_seconds = 15
}

resource "azurerm_lb_rule" "app_rule" {
  loadbalancer_id                = azurerm_lb.app_lb.id
  name                           = "app-${var.EnvName}-lb-rule"
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = local.frontend_ip_configuration_name
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.app_backend_pool.id]
  probe_id                       = azurerm_lb_probe.app_probe.id
}

### Data Load Balancer ###

# Database Tier Internal Load Balancer
resource "azurerm_lb" "data_lb" {
  name                = "db-${var.EnvName}-lb"
  resource_group_name = azurerm_resource_group.db_rg.name
  location            = azurerm_resource_group.db_rg.location
  sku                 = "Standard"

  frontend_ip_configuration {
    name                          = local.frontend_ip_configuration_name
    subnet_id                     = azurerm_subnet.data_lb_subnet.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_lb_backend_address_pool" "data_backend_pool" {
  loadbalancer_id = azurerm_lb.data_lb.id
  name            = local.backend_address_pool_name
}

resource "azurerm_lb_probe" "data_probe" {
  loadbalancer_id = azurerm_lb.data_lb.id
  name            = local.health_probe_name
  protocol        = "Tcp"
  port            = 1433
}

resource "azurerm_lb_rule" "data_rule" {
  loadbalancer_id                = azurerm_lb.data_lb.id
  name                           = "db-${var.EnvName}-lb-rule"
  protocol                       = "Tcp"
  frontend_port                  = 1433
  backend_port                   = 1433
  frontend_ip_configuration_name = local.frontend_ip_configuration_name
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.data_backend_pool.id]
  probe_id                       = azurerm_lb_probe.data_probe.id
}

### Network Security Groups ###

resource "azurerm_network_security_group" "web_nsg" {
  name                = "web-${var.EnvName}-nsg"
  resource_group_name = azurerm_resource_group.web_rg.name
  location            = azurerm_resource_group.web_rg.location

  ### Inbound Rules ###
  dynamic "security_rule" {
    for_each = var.HubEnabled ? [1] : []
    content {
      name                       = "Allow-ICMP-Hub-Mgmt-Tier"
      priority                   = 125
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Icmp"
      source_port_range          = "*"
      destination_port_range     = "*"
      source_address_prefix      = data.azurerm_subnet.mgmt[0].address_prefix
      destination_address_prefix = var.WebSubnetPrefix[0]
    }
  }

  security_rule {
    name                       = "Allow-HTTP-From-AppGW-Subnet"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = azurerm_subnet.appgw_subnet.address_prefixes[0]
    destination_address_prefix = var.WebSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-HTTPS-From-AppGW-Subnet"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = azurerm_subnet.appgw_subnet.address_prefixes[0]
    destination_address_prefix = var.WebSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Health-Probe"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "AzureLoadBalancer"
    destination_address_prefix = var.WebSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-ICMP-App-Tier"
    priority                   = 130
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Icmp"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = var.AppSubnetPrefix[0]
    destination_address_prefix = var.WebSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Bastion-SSH"
    priority                   = 140
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "VirtualNetwork"
    destination_address_prefix = var.WebSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Bastion-RDP"
    priority                   = 150
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "VirtualNetwork"
    destination_address_prefix = var.WebSubnetPrefix[0]
  }

  security_rule {
    name                       = "Deny-All-Inbound"
    priority                   = 200
    direction                  = "Inbound"
    access                     = "Deny"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = var.WebSubnetPrefix[0]
  }
  ### Outbound Rules ###
  security_rule {
    name                       = "Allow-Internet-Outbound"
    priority                   = 1000
    direction                  = "Outbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = var.WebSubnetPrefix[0]
    destination_address_prefix = "Internet"
  }
}

resource "azurerm_network_security_group" "app_nsg" {
  name                = "app-${var.EnvName}-nsg"
  resource_group_name = azurerm_resource_group.app_rg.name
  location            = azurerm_resource_group.app_rg.location

  ### Inbound Rules ###
  dynamic "security_rule" {
    for_each = var.HubEnabled ? [1] : []
    content {
      name                       = "Allow-ICMP-Hub-Mgmt-Tier"
      priority                   = 125
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Icmp"
      source_port_range          = "*"
      destination_port_range     = "*"
      source_address_prefix      = data.azurerm_subnet.mgmt[0].address_prefix
      destination_address_prefix = var.AppSubnetPrefix[0]
    }
  }

  security_rule {
    name                       = "Allow-HTTP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = var.WebSubnetPrefix[0]
    destination_address_prefix = var.AppSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-HTTPS"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = var.WebSubnetPrefix[0]
    destination_address_prefix = var.AppSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Health-Probe"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "AzureLoadBalancer"
    destination_address_prefix = var.AppSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-ICMP-Web-Data-Tiers"
    priority                   = 130
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Icmp"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefixes    = [var.WebSubnetPrefix[0], var.DataSubnetPrefix[0]]
    destination_address_prefix = var.AppSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Bastion-SSH"
    priority                   = 140
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "VirtualNetwork"
    destination_address_prefix = var.AppSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Bastion-RDP"
    priority                   = 150
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "VirtualNetwork"
    destination_address_prefix = var.AppSubnetPrefix[0]
  }

  security_rule {
    name                       = "Deny-All-Inbound"
    priority                   = 200
    direction                  = "Inbound"
    access                     = "Deny"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = var.AppSubnetPrefix[0]
  }
  ### Outbound Rules ###
  security_rule {
    name                       = "Allow-Internet-Outbound"
    priority                   = 1000
    direction                  = "Outbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = var.AppSubnetPrefix[0]
    destination_address_prefix = "Internet"
  }
}

resource "azurerm_network_security_group" "data_nsg" {
  name                = "db-${var.EnvName}-nsg"
  resource_group_name = azurerm_resource_group.db_rg.name
  location            = azurerm_resource_group.db_rg.location

  ### Inbound Rules ###
  dynamic "security_rule" {
    for_each = var.HubEnabled ? [1] : []
    content {
      name                       = "Allow-ICMP-Hub-Mgmt-Tier"
      priority                   = 125
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Icmp"
      source_port_range          = "*"
      destination_port_range     = "*"
      source_address_prefix      = data.azurerm_subnet.mgmt[0].address_prefix
      destination_address_prefix = var.DataSubnetPrefix[0]
    }
  }

  security_rule {
    name                       = "Allow-DB-Traffic"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "1433"
    source_address_prefix      = var.AppSubnetPrefix[0]
    destination_address_prefix = var.DataSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Health-Probe"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "1433"
    source_address_prefix      = "AzureLoadBalancer"
    destination_address_prefix = var.DataSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-ICMP-App-Tier"
    priority                   = 130
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Icmp"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = var.AppSubnetPrefix[0]
    destination_address_prefix = var.DataSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Bastion-SSH"
    priority                   = 140
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "VirtualNetwork"
    destination_address_prefix = var.DataSubnetPrefix[0]
  }

  security_rule {
    name                       = "Allow-Bastion-RDP"
    priority                   = 150
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "VirtualNetwork"
    destination_address_prefix = var.DataSubnetPrefix[0]
  }

  security_rule {
    name                       = "Deny-All-Inbound"
    priority                   = 200
    direction                  = "Inbound"
    access                     = "Deny"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = var.DataSubnetPrefix[0]
  }
  ### Outbound Rules ###
  security_rule {
    name                       = "Allow-Internet-Outbound"
    priority                   = 1000
    direction                  = "Outbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = var.DataSubnetPrefix[0]
    destination_address_prefix = "Internet"
  }
}

resource "azurerm_subnet_network_security_group_association" "web_nsg_association" {
  subnet_id                 = azurerm_subnet.web_subnet.id
  network_security_group_id = azurerm_network_security_group.web_nsg.id
}

resource "azurerm_subnet_network_security_group_association" "app_nsg_association" {
  subnet_id                 = azurerm_subnet.app_subnet.id
  network_security_group_id = azurerm_network_security_group.app_nsg.id
}

resource "azurerm_subnet_network_security_group_association" "data_nsg_association" {
  subnet_id                 = azurerm_subnet.data_subnet.id
  network_security_group_id = azurerm_network_security_group.data_nsg.id
}

### Route Tables Spoke ###

resource "azurerm_route_table" "fw_route_table" {
  count               = (var.HubEnabled && var.FwEnabled) ? 1 : 0
  name                = "spoke-firewall-route-table"
  resource_group_name = azurerm_resource_group.network_rg.name
  location            = azurerm_resource_group.network_rg.location

  route {
    name                   = "default-firewall-route"
    address_prefix         = "0.0.0.0/0"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = data.azurerm_firewall.hub[0].ip_configuration[0].private_ip_address
  }
  route {
    name                   = "mgmt-firewall-route"
    address_prefix         = data.azurerm_subnet.mgmt[0].address_prefixes[0]
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = data.azurerm_firewall.hub[0].ip_configuration[0].private_ip_address
  }
  route {
    name                   = "gateway-firewall-route"
    address_prefix         = data.azurerm_subnet.gateway[0].address_prefixes[0]
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = data.azurerm_firewall.hub[0].ip_configuration[0].private_ip_address
  }
}

resource "azurerm_subnet_route_table_association" "web_route_table_association" {
  count          = (var.HubEnabled && var.FwEnabled) ? 1 : 0
  subnet_id      = azurerm_subnet.web_subnet.id
  route_table_id = azurerm_route_table.fw_route_table[0].id
}

resource "azurerm_subnet_route_table_association" "app_route_table_association" {
  count          = (var.HubEnabled && var.FwEnabled) ? 1 : 0
  subnet_id      = azurerm_subnet.app_subnet.id
  route_table_id = azurerm_route_table.fw_route_table[0].id
}

resource "azurerm_subnet_route_table_association" "data_route_table_association" {
  count          = (var.HubEnabled && var.FwEnabled) ? 1 : 0
  subnet_id      = azurerm_subnet.data_subnet.id
  route_table_id = azurerm_route_table.fw_route_table[0].id
}

### NAT Gateway ###

resource "azurerm_nat_gateway" "nat_gateway" {
  count               = (var.HubEnabled && var.FwEnabled) ? 0 : 1
  name                = "${var.EnvName}-nat-gateway"
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name
  sku_name            = "Standard"
}

resource "azurerm_public_ip" "nat_gateway_pip" {
  count               = (var.HubEnabled && var.FwEnabled) ? 0 : 1
  name                = "${var.EnvName}-nat-gateway-pip"
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name
  allocation_method   = "Static"
  sku                 = "Standard"

  lifecycle {
    ignore_changes = [ip_tags]
  }
}

resource "azurerm_subnet_nat_gateway_association" "web_subnet_nat_association" {
  count          = (var.HubEnabled && var.FwEnabled) ? 0 : 1
  subnet_id      = azurerm_subnet.web_subnet.id
  nat_gateway_id = azurerm_nat_gateway.nat_gateway[0].id
}

resource "azurerm_subnet_nat_gateway_association" "app_subnet_nat_association" {
  count          = (var.HubEnabled && var.FwEnabled) ? 0 : 1
  subnet_id      = azurerm_subnet.app_subnet.id
  nat_gateway_id = azurerm_nat_gateway.nat_gateway[0].id
}

resource "azurerm_subnet_nat_gateway_association" "data_subnet_nat_association" {
  count          = (var.HubEnabled && var.FwEnabled) ? 0 : 1
  subnet_id      = azurerm_subnet.data_subnet.id
  nat_gateway_id = azurerm_nat_gateway.nat_gateway[0].id
}

resource "azurerm_nat_gateway_public_ip_association" "nat_gateway_pip_association" {
  count                = (var.HubEnabled && var.FwEnabled) ? 0 : 1
  nat_gateway_id       = azurerm_nat_gateway.nat_gateway[0].id
  public_ip_address_id = azurerm_public_ip.nat_gateway_pip[0].id
}

#=========#
# Compute #
#=========#

### Web Virtual Machine Scale Set ###

resource "azurerm_linux_virtual_machine_scale_set" "web_vmss" {
  name                            = "web-${var.EnvName}-vmss"
  resource_group_name             = azurerm_resource_group.web_rg.name
  location                        = azurerm_resource_group.web_rg.location
  sku                             = var.WebVmssSize
  instances                       = var.WebInstanceCount
  admin_username                  = var.AdminUsername
  admin_password                  = var.AdminPassword
  disable_password_authentication = false

  network_interface {
    name    = "nic-web-${var.EnvName}-vmss"
    primary = true

    ip_configuration {
      name                                         = "internal"
      primary                                      = true
      subnet_id                                    = azurerm_subnet.web_subnet.id
      application_gateway_backend_address_pool_ids = [local.app_gateway_backend_pool_ids[0]]
    }
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_id = local.web_vmss_source_image_id
}

### Application Virtual Machine Scale Set ###

resource "azurerm_linux_virtual_machine_scale_set" "app_vmss" {
  name                            = "app-${var.EnvName}-vmss"
  resource_group_name             = azurerm_resource_group.app_rg.name
  location                        = azurerm_resource_group.app_rg.location
  sku                             = var.AppVmssSize
  instances                       = var.AppInstanceCount
  admin_username                  = var.AdminUsername
  admin_password                  = var.AdminPassword
  disable_password_authentication = false

  network_interface {
    name    = "nic-app-${var.EnvName}-vmss"
    primary = true

    ip_configuration {
      name                                   = "internal"
      primary                                = true
      subnet_id                              = azurerm_subnet.app_subnet.id
      load_balancer_backend_address_pool_ids = [azurerm_lb_backend_address_pool.app_backend_pool.id]
    }
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_id = local.app_vmss_source_image_id
}

### Database Virtual Machines ###

resource "azurerm_windows_virtual_machine" "db_vm_primary" {
  name                      = "db-${var.EnvName}-vm-primary"
  computer_name             = "db-${substr(var.EnvName, 0, 9)}-pri"
  resource_group_name       = azurerm_resource_group.db_rg.name
  location                  = azurerm_resource_group.db_rg.location
  size                      = var.DbVmSize
  admin_username            = var.AdminUsername
  admin_password            = var.AdminPassword
  network_interface_ids     = [azurerm_network_interface.db_nic_primary.id]
  provision_vm_agent        = true
  automatic_updates_enabled = false
  timezone                  = "UTC"

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftSQLServer"
    offer     = "sql2022-ws2022"
    sku       = "sqldev-gen2"
    version   = "latest"
  }
}

resource "azurerm_network_interface" "db_nic_primary" {
  name                = "nic-db-${var.EnvName}-vm-primary"
  resource_group_name = azurerm_resource_group.db_rg.name
  location            = azurerm_resource_group.db_rg.location

  ip_configuration {
    name                          = "nic-db-${var.EnvName}-vm-config"
    subnet_id                     = azurerm_subnet.data_subnet.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_network_interface_backend_address_pool_association" "primary_association" {
  network_interface_id    = azurerm_network_interface.db_nic_primary.id
  ip_configuration_name   = "nic-db-${var.EnvName}-vm-config"
  backend_address_pool_id = azurerm_lb_backend_address_pool.data_backend_pool.id
}

resource "azurerm_windows_virtual_machine" "db_vm_secondary" {
  name                      = "db-${var.EnvName}-vm-secondary"
  computer_name             = "db-${substr(var.EnvName, 0, 9)}-sec"
  resource_group_name       = azurerm_resource_group.db_rg.name
  location                  = azurerm_resource_group.db_rg.location
  size                      = var.DbVmSize
  admin_username            = var.AdminUsername
  admin_password            = var.AdminPassword
  network_interface_ids     = [azurerm_network_interface.db_nic_secondary.id]
  provision_vm_agent        = true
  automatic_updates_enabled = false
  timezone                  = "UTC"

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftSQLServer"
    offer     = "sql2022-ws2022"
    sku       = "sqldev-gen2"
    version   = "latest"
  }
}

resource "azurerm_network_interface" "db_nic_secondary" {
  name                = "nic-db-${var.EnvName}-vm-secondary"
  resource_group_name = azurerm_resource_group.db_rg.name
  location            = azurerm_resource_group.db_rg.location

  ip_configuration {
    name                          = "nic-db-${var.EnvName}-vm-config"
    subnet_id                     = azurerm_subnet.data_subnet.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_network_interface_backend_address_pool_association" "secondary_association" {
  network_interface_id    = azurerm_network_interface.db_nic_secondary.id
  ip_configuration_name   = "nic-db-${var.EnvName}-vm-config"
  backend_address_pool_id = azurerm_lb_backend_address_pool.data_backend_pool.id
}

### Database Data Disks ###

resource "azurerm_managed_disk" "primary_data_disk" {
  name                 = "db-${var.EnvName}-vm-primary-data-disk"
  resource_group_name  = azurerm_resource_group.db_rg.name
  location             = azurerm_resource_group.db_rg.location
  storage_account_type = "Premium_LRS"
  create_option        = "Empty"
  disk_size_gb         = 64
}

resource "azurerm_virtual_machine_data_disk_attachment" "primary_data_disk_attachment" {
  managed_disk_id    = azurerm_managed_disk.primary_data_disk.id
  virtual_machine_id = azurerm_windows_virtual_machine.db_vm_primary.id
  lun                = 0
  caching            = "ReadWrite"
}

resource "azurerm_managed_disk" "secondary_data_disk" {
  name                 = "db-${var.EnvName}-vm-secondary-data-disk"
  resource_group_name  = azurerm_resource_group.db_rg.name
  location             = azurerm_resource_group.db_rg.location
  storage_account_type = "Premium_LRS"
  create_option        = "Empty"
  disk_size_gb         = 64
}

resource "azurerm_virtual_machine_data_disk_attachment" "secondary_data_disk_attachment" {
  managed_disk_id    = azurerm_managed_disk.secondary_data_disk.id
  virtual_machine_id = azurerm_windows_virtual_machine.db_vm_secondary.id
  lun                = 0
  caching            = "ReadWrite"
}

### SQL IaaS Agent Extension (azurerm_mssql_virtual_machine) ###
#
# Companion resource to each db_vm_* — installs and configures the SQL IaaS
# Agent extension on the marketplace SQL VM. Microsoft's blessed pattern for
# SQL on Azure VMs; replaces the prior Packer + sysprep approach which
# Microsoft explicitly does NOT support for SQL marketplace images.
#
# storage_configuration uses LUN 0 (the data disk attached above) for data,
# log, AND tempdb files (all on F:). Microsoft's docs support tempdb on the
# ephemeral D: drive for higher IO, but the SQL IaaS extension is flaky
# applying that on first boot ("System Drive returned status not ready for
# use") because the temp disk isn't mounted yet when the extension fires.
# Co-locating tempdb on F: trades some IO perf for first-deploy reliability,
# which suits the dev/test workload here. Disk format is performed by the
# extension on first apply.
#
# sql_license_type = "PAYG" is correct for the Developer SKU (billed at $0).

resource "azurerm_mssql_virtual_machine" "db_vm_primary" {
  virtual_machine_id    = azurerm_windows_virtual_machine.db_vm_primary.id
  sql_license_type      = "PAYG"
  r_services_enabled    = false
  sql_connectivity_port = 1433
  sql_connectivity_type = "PRIVATE"

  storage_configuration {
    disk_type             = "NEW"
    storage_workload_type = "GENERAL"

    data_settings {
      default_file_path = "F:\\SQLData"
      luns              = [0]
    }
    log_settings {
      default_file_path = "F:\\SQLLog"
      luns              = [0]
    }
    temp_db_settings {
      default_file_path = "F:\\SQLTemp"
      luns              = [0]
    }
  }

  depends_on = [azurerm_virtual_machine_data_disk_attachment.primary_data_disk_attachment]
}

resource "azurerm_mssql_virtual_machine" "db_vm_secondary" {
  virtual_machine_id    = azurerm_windows_virtual_machine.db_vm_secondary.id
  sql_license_type      = "PAYG"
  r_services_enabled    = false
  sql_connectivity_port = 1433
  sql_connectivity_type = "PRIVATE"

  storage_configuration {
    disk_type             = "NEW"
    storage_workload_type = "GENERAL"

    data_settings {
      default_file_path = "F:\\SQLData"
      luns              = [0]
    }
    log_settings {
      default_file_path = "F:\\SQLLog"
      luns              = [0]
    }
    temp_db_settings {
      default_file_path = "F:\\SQLTemp"
      luns              = [0]
    }
  }

  depends_on = [azurerm_virtual_machine_data_disk_attachment.secondary_data_disk_attachment]
}

### Data-Tier OS Bootstrap (CustomScriptExtension) ###
#
# Runs scripts/data-bootstrap.ps1 as a Windows CSE after the SQL IaaS
# Agent extension. Applies OS-level customizations the SQL IaaS extension
# does not handle (firewall rules for AG/Browser/ICMP, ops dir, dbatools).
# Intentionally does NOT manage SQL services, AG/HADR flags, or disk
# formatting — those are owned by the SQL IaaS extension.
#
# Invocation pattern: commandToExecute with -EncodedCommand.
#   - The Windows CSE (Microsoft.Compute/CustomScriptExtension v1.10) does
#     NOT support an inline `script` field — that's a Linux-CSE-only
#     feature. Windows requires commandToExecute (optionally with fileUris).
#   - We base64(UTF-16LE) the script and pass via -EncodedCommand. cmd.exe
#     caps the command line at ~8192 chars; encoding overhead is ~2.67x raw.
#     Current script ~2.2KB raw → ~5.9KB encoded total → ~28% headroom.
#     If the script ever needs to grow past ~3KB raw, switch to fileUris.
#   - protected_settings (not settings) keeps the encoded payload out of
#     plaintext Azure activity logs as a defensive default.

resource "azurerm_virtual_machine_extension" "db_vm_primary_bootstrap" {
  name                       = "sls-data-bootstrap"
  virtual_machine_id         = azurerm_windows_virtual_machine.db_vm_primary.id
  publisher                  = "Microsoft.Compute"
  type                       = "CustomScriptExtension"
  type_handler_version       = "1.10"
  auto_upgrade_minor_version = true

  protected_settings = jsonencode({
    commandToExecute = "powershell.exe -ExecutionPolicy Bypass -EncodedCommand ${textencodebase64(file("${path.module}/scripts/data-bootstrap.ps1"), "UTF-16LE")}"
  })

  depends_on = [azurerm_mssql_virtual_machine.db_vm_primary]
}

resource "azurerm_virtual_machine_extension" "db_vm_secondary_bootstrap" {
  name                       = "sls-data-bootstrap"
  virtual_machine_id         = azurerm_windows_virtual_machine.db_vm_secondary.id
  publisher                  = "Microsoft.Compute"
  type                       = "CustomScriptExtension"
  type_handler_version       = "1.10"
  auto_upgrade_minor_version = true

  protected_settings = jsonencode({
    commandToExecute = "powershell.exe -ExecutionPolicy Bypass -EncodedCommand ${textencodebase64(file("${path.module}/scripts/data-bootstrap.ps1"), "UTF-16LE")}"
  })

  depends_on = [azurerm_mssql_virtual_machine.db_vm_secondary]
}
